[package]
name = "livestock"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
clap = { version = "4.5.20", features = ["derive"] }
dirs = "5.0.1"
ordered-float = "5.1.0"
regex = "1.12.2"
reqwest = "0.12.8"
rusqlite = "0.32.1"
serde = "1.0.228"
serde_json = "1.0.132"
textplots = "0.8.6"
tokio = { version = "1.41.0", features = ["macros", "rt-multi-thread"] }
yahoo_finance_api = "2.3.0"
